<resources>
    <string name="app_name">Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Security Preferences -->
    <string name="security_header">Security</string>

    <!-- Sync Preferences -->
    <string name="sync_header">Sync</string>
    <string name="sync_devices_title">Sync devices</string>
    <string name="devices_found">No any devices found</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome home,</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be longer than 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="category_tv">TV</string>
    <string name="category_wifi" translatable="false">Wi-Fi</string>
    <string name="category_locks">Locks</string>
    <string name="biometric_confirmation">Biometric confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="сonfirm_identity">Confirm your identity</string>
    <string name="category_music">Sound</string>
    <string name="identification_signin">Sign in</string>
    <string name="identification_signup">Sign up</string>
    <string name="biometric_prompt_title">Biometric prompt</string>
    <string name="action_profile">Profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_login">Login</string>
    <string name="app_title">Home</string>
    <string name="prompt_login_or_email">Login or Email</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_password_repeat">Repeat Password</string>
    <string name="prompt_last_name">Second Name</string>
    <string name="activity_registration_title">Sign In</string>
</resources>
