<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/activity_registration_title"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/prompt_login">
        </EditText>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/prompt_email">
        </EditText>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/prompt_first_name">
        </EditText>


        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/prompt_last_name">
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/prompt_password">
        </EditText>

        <EditText
            android:id="@+id/password_repeat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/prompt_password_repeat">
        </EditText>


        <Button
            android:id="@+id/loginAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:enabled="false"
            android:text="@string/action_sign_in"
            android:textColor="@android:color/white"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>